# discrete-flow-matching-pytorch

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: conv-8.yaml
discrete_flow_matching/: flops.py  model.py  train.py
notebooks/: sample.ipynb
src/discrete_flow_matching_pytorch/: data.py  flops.py  lightning.py  model.py  train.py
