[project]
name = "discrete-flow-matching-pytorch"
version = "0.1.0"
description = "Implementation of Discrete Flow Matching in PyTorch"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.1.0",
    "jsonargparse>=4.34.0",
    "lightning>=2.4.0",
    "more-itertools>=10.5.0",
    "pyinstrument>=5.0.0",
    "structlog>=24.4.0",
    "torch>=2.5.1",
    "transformers>=4.46.2",
    "wandb>=0.18.6",
]

[dependency-groups]
jupyter = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.9.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
